Updated package and readme removed other files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-example",
+  "name": "generator-one-craft",
   "version": "0.0.1",
   "description": "Yeoman generator to spin up Craft CMS project, One Darnley Road style",
   "files": [
