--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chalk": "^1.1.1",
     "gulp-beautify": "^2.0.0",
     "gulp-if": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "yeoman-generator": "^0.22.5",
     "yosay": "^1.1.0"
   }
